--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,4 +1,5 @@
-@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap";
+@import "~bootstrap-select/sass/bootstrap-select.scss";
 
 //VARIABLES
 $bg: rgba(0, 0, 0, 0.1);
@@ -11,4 +12,8 @@ body {
 
 .form-group-md {
     max-width: $formMaxWidth;
+}
+
+.hidden {
+    display: none !important;
 }
