--- a/public/views/form.html
+++ b/public/views/form.html
@@ -4,10 +4,64 @@
     <title>Contact Us</title>
     <link rel="stylesheet" href="/css/style.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png"/>
+    <link rel="manifest" href="/favicons/site.webmanifest"/>
+    <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5"/>
+    <link rel="shortcut icon" href="/favicons/favicon.ico"/>
+    <meta name="msapplication-TileColor" content="#da532c"/>
+    <meta name="msapplication-config" content="/favicons/browserconfig.xml"/>
+    <meta name="theme-color" content="#ffffff"/>
+
 </head>
 <body>
 <div class="container">
-    <div class="card my-5">
+    <noscript>
+        <div class="card my-5">
+            <div class="card-header">
+                <h1>Contact Information</h1>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h4>Write to us at:</h4>
+                        <p>
+                            Companyname.co.uk <br />
+                            74  St James Boulevard <br />
+                            Mawdlam <br />
+                            DL6 0JT <br />
+                        </p>
+                    </div>
+                </div>
+                <hr />
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h4>Email us:</h4>
+                        <p>
+                            Email us at: <a href="mailto:contact@companyname.co.uk">contact@companyname.co.uk</a>
+                        </p>
+                    </div>
+                </div>
+                <hr />
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h4>Give us a call:</h4>
+                        <p>
+                            <a href="tel:07722476144">0772 247 6144</a><br />
+                            <small>
+                                Lines are open 9am - 5pm Monday - Friday.<br />
+                                Calls may be recorded for training and monitoring purposes.
+                            </small>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </noscript>
+    
+    <div class="card my-5 js-contact-form hidden">
         <!--START FORM-->
         <form action="/" method="POST" class="js-form-submit">
             <div class="card-header">
@@ -34,11 +88,11 @@
                 <div class="row">
                     <div class="form-group col-md-6 col-sm-12">
                         <label for="firstName" class="h6 text-uppercase">First name</label>
-                        <input name="firstName" type="text" class="form-control" id="firstName" placeholder="Enter first name">
+                        <input name="firstName" required type="text" class="form-control" id="firstName" placeholder="Enter first name">
                     </div>
                     <div class="form-group col-md-6 col-sm-12">
                         <label for="lastName" class="h6 text-uppercase">Last name</label>
-                        <input name="lastName" type="text" class="form-control" id="lastName" placeholder="Enter last name">
+                        <input name="lastName" required type="text" class="form-control" id="lastName" placeholder="Enter last name">
                     </div>
                 </div>
                 <div class="row">
@@ -57,7 +111,7 @@
                 <div class="row">
                     <div class="form-group col-sm-12">
                         <label for="comment" class="h6 text-uppercase">Comment</label>
-                        <textarea name="comment" class="form-control" id="comment" placeholder="How can we help?"></textarea>
+                        <textarea name="comment" required minlength="10" class="form-control" id="comment" placeholder="How can we help?"></textarea>
                     </div>
                 </div>
             </div>
