Simplified Javascript for the contact form.

--- a/public/views/form.html
+++ b/public/views/form.html
@@ -61,9 +61,9 @@
         </div>
     </noscript>
 
-    <div class="card my-5 js-contact-form hidden">
+    <div class="card my-5 hidden" id="contactFormContainer">
         <!--START FORM-->
-        <form action="/" method="POST" class="js-form-submit">
+        <form action="/" method="POST" id="contactForm">
             <div class="card-header">
                 <h1>Send us an email!</h1>
             </div>
