--- a/public/views/form.html
+++ b/public/views/form.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="form-group col-md-6 col-sm-12">
                         <label for="orderNumber" class="h6 text-uppercase">Order Number</label>
-                        <input name="orderNumber" type="number" class="form-control" id="orderNumber" min="1" placeholder="Enter order number">
+                        <input name="orderNumber" type="number" class="form-control" id="orderNumber" min="1" placeholder="123456">
                     </div>
                 </div>
                 <hr/>
@@ -88,24 +88,24 @@
                 <div class="row">
                     <div class="form-group col-md-6 col-sm-12">
                         <label for="firstName" class="h6 text-uppercase">First name</label>
-                        <input name="firstName" required type="text" class="form-control" id="firstName" placeholder="Enter first name">
+                        <input name="firstName" required type="text" class="form-control" id="firstName" placeholder="John">
                     </div>
                     <div class="form-group col-md-6 col-sm-12">
                         <label for="lastName" class="h6 text-uppercase">Last name</label>
-                        <input name="lastName" required type="text" class="form-control" id="lastName" placeholder="Enter last name">
+                        <input name="lastName" required type="text" class="form-control" id="lastName" placeholder="Smith">
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-md-6 col-sm-12">
                         <label for="email" class="h6 text-uppercase">Email address</label>
-                        <input name="email" type="email" required class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email address">
+                        <input name="email" type="email" required class="form-control" id="email" aria-describedby="emailHelp" placeholder="Johnsmith@inbox.com">
                         <small id="emailHelp" class="form-text text-muted">
                             We'll never share your email with anyone else.
                         </small>
                     </div>
                     <div class="form-group col-md-6 col-sm-12">
                         <label for="phoneNo" class="h6 text-uppercase">Phone</label>
-                        <input name="phoneNo" type="text" class="form-control" id="phoneNo" placeholder="Enter phone number">
+                        <input name="phoneNo" type="text" class="form-control" id="phoneNo" placeholder="0772 247 6144">
                     </div>
                 </div>
                 <div class="row">
